added day 3 solutions and updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-Day1/debug/
-Day1/.vs/
-Day1/Day1/debug/
-Day2/debug/
-Day2/.vs/
-Day2/Day2/debug/
+Day*/debug/
+Day*/.vs/
+Day*/Day*/debug/
 *.vcxproj 
 *.vcxproj.* 
